# xctools

numautil/: AUTHORS  README  configure.in  version-files
numautil/src/: Makefile.am  numa_config.sh  numaconfig.sh  numautil.c  project.h
numautil/test/: grub.cfg  numautil  tests.sh  xec-vm
qmp_helper/src/: project.h  qmp_helper.c
